--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
@@ -17,6 +19,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "stripe": "^12.9.0",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
   },
