--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "react-tabs": "^6.0.1",
     "stripe": "^12.9.0",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
