--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
     "stripe": "^12.9.0",
