--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
     "firebase": "^9.22.1",
+    "keep-react": "^1.0.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
